Applications/pihole/deployment-pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole-custom:b015a0acebe8
          securityContext:
            readOnlyRootFilesystem: true 
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns-tcp 
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - name: pihole-storage
              mountPath: /etc/pihole
            - name: dnsmasq-storage
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole-storage
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: dnsmasq-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-service
  namespace: pihole
spec:
  type: LoadBalancer
  clusterIP: 10.43.3.33
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin-service
  namespace: pihole 
spec:
  type: ClusterIP
  selector:
    app: pihole 
  ports:
  - name: http 
    port: 80
    targetPort: 80
