Applications/pihole/ingress-pihole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /admin/$1
spec:
  rules:
  - host: "pi-hole.cbc" 
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: pihole-admin-service
            port:
              number: 80
